added options to use cup

--- a/app/dla/src/.vscode/launch.json
+++ b/app/dla/src/.vscode/launch.json
@@ -14,7 +14,8 @@
             "args": [
                 "--full_inference",
                 // "--continue_last",
-                // "--model_type", "LAYOUTLMV3"
+                // "--model_type", "LAYOUTLMV3",
+                // "--use_cpu"
             ]
         }
     ]
