added debug notes endpoint

--- a/app/dla/src/.vscode/launch.json
+++ b/app/dla/src/.vscode/launch.json
@@ -15,6 +15,7 @@
                 "--full_inference",
                 // "--continue_last",
                 // "--model_type", "LAYOUTLMV3",
+                // "--model_type", "crap",
                 // "--use_cpu"
             ]
         }
