--- a/app/dla/src/dla_pipeline_settings.yaml
+++ b/app/dla/src/dla_pipeline_settings.yaml
@@ -1,9 +1,9 @@
 DIRECTORIES:
-  DATA_DIRECTORY: "/user/w210/data"
+  DATA_DIRECTORY: "/data"
 
 MODEL:
   DIT:
-    MODEL_WEIGHTS: "/user/w210/model_weights/DiT/publaynet_dit-b_mrcnn.zip"
+    MODEL_WEIGHTS: "/model_weights/DiT/publaynet_dit-b_mrcnn.zip"
       
   LAYOUTLMV3:
-    MODEL_WEIGHTS: "/user/w210/model_weights/LayoutLMV3/base-finetuned-publaynet/model_final.pth"
+    MODEL_WEIGHTS: "/model_weights/LayoutLMV3/base-finetuned-publaynet/model_final.pth"
