--- a/app/dla/docker_resources/requirements_layoutlmv3.txt
+++ b/app/dla/docker_resources/requirements_layoutlmv3.txt
@@ -1,9 +1,15 @@
-datasets==1.15.1
-transformers==4.12.5
+#NEW
+accelerate==0.24.1
+transformers==4.35.2
+datasets==2.15.0
 seqeval==1.2.2
+
+#OLD
+# datasets==1.15.1
+# transformers==4.12.5
 deepspeed==0.5.7
 # tensorboard==2.7.0
-seqeval==1.2.2
+# seqeval==1.2.2
 sentencepiece
 timm==0.4.12
 Pillow
